--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
