--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A reactJS training app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start-dev": "webpack-dev-server -d --progress --colors --display-error-details",
+    "start": "webpack-dev-server -d --progress --colors --display-error-details",
     "build": "npm run env NODE_ENV=production&&webpack -p --progress --colors --display-error-details",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -40,26 +39,14 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^3.3.7",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.9.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "style-loader": "^0.13.1",
     "toastr": "^2.1.2",
-    "url-loader": "^0.5.7",
     "flux": "^3.1.2",
     "jquery": "^3.1.1",
-    "lodash": "^4.17.4",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "lodash": "^4.17.4"
   }
 }
